Picture-in-Picture: start pipeline to get surface id when needed.

In some cases, the pipeline will not be ready when trying to enter
Picture-in-Picture. It will happen if the video has preloaded its
metadata and has a poster. In this case, the Picture-in-Picture request
will be delayed until the pipeline has started and there is a surface.

Bug: 847671
Change-Id: I56b0560db37ac2e6466abbd3f089973777c49f0f
Reviewed-on: https://chromium-review.googlesource.com/1077453
Reviewed-by: Dan Sanders <sandersd@chromium.org>
Reviewed-by: apacible <apacible@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563131}
Former-commit-id: 37e8ae8e13a72afb0b2f1a968efd161ef4b4b15b